fix: добавить overflow

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,6 @@
 .profile__info {
-  min-width: 40%;
   margin: 22px 30px 0;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
